[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/resource/font_48px.tres" type="DynamicFont" id=1]
[ext_resource path="res://scene/item/RankItem.gd" type="Script" id=2]
[ext_resource path="res://asset/resource/font_24px.tres" type="DynamicFont" id=3]
[ext_resource path="res://asset/resource/font_32px.tres" type="DynamicFont" id=4]

[node name="RankItem" type="HBoxContainer"]
margin_right = 720.0
margin_bottom = 48.0
script = ExtResource( 2 )

[node name="LbRank" type="Label" parent="."]
margin_right = 196.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
valign = 1

[node name="LbName" type="Label" parent="."]
margin_left = 200.0
margin_top = 12.0
margin_right = 520.0
margin_bottom = 36.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Name"
align = 1
valign = 1
autowrap = true

[node name="LbScore" type="Label" parent="."]
margin_left = 524.0
margin_top = 8.0
margin_right = 720.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Score"
align = 1
valign = 1
